Reallocated index.html

--- a/html/blog.html
+++ b/html/blog.html
@@ -21,7 +21,7 @@
   <body>
 
     <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
-        <a class="navbar-brand" href="index.html">Marti Gimeno Orti </a>
+        <a class="navbar-brand" href="../index.html">Marti Gimeno Orti </a>
         <ul class="nav navbar-nav">
             <li class="dropdown nav-item">
                 <a id="drop1" href="#" role="button" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -68,7 +68,7 @@
             <br>
             <h3>Initial content:</h3>
             <hr>
-            <p>In this first version I'm publishing a lot of <a href="cg.html">old renders</a>, they need a description that I'll add later. I'm publishing <a href="physics.html">two projects </a> involving science and coding. I think i'll have to improve the information of both projects in order to give a much more in depth description. The <a href="index.html">front page</a> is finished, but the <a href="about.html">about me</a> page needs more touches.</p>
+            <p>In this first version I'm publishing a lot of <a href="cg.html">old renders</a>, they need a description that I'll add later. I'm publishing <a href="physics.html">two projects </a> involving science and coding. I think i'll have to improve the information of both projects in order to give a much more in depth description. The <a href="../index.html">front page</a> is finished, but the <a href="about.html">about me</a> page needs more touches.</p>
             <br>
             <h3>Further work:</h3>
             <hr>
