--- a/html/physics.html
+++ b/html/physics.html
@@ -23,7 +23,7 @@
     <body>
 
         <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
-            <a class="navbar-brand" href="index.html">Marti Gimeno Orti </a>
+            <a class="navbar-brand" href="../index.html">Marti Gimeno Orti </a>
             <ul class="nav navbar-nav">
                 <li class="dropdown nav-item">
                     <a id="drop1" href="#" role="button" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
