--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../favicon.ico">
+    <link rel="icon" href="favicon.ico">
 
     <title>Marti Gimeno Orti</title>
 
@@ -28,18 +28,18 @@
             Projects
           </a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="cg.html">Graphics</a>
+            <a class="dropdown-item" href="/html/cg.html">Graphics</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="coding.html">Code</a>
+            <a class="dropdown-item" href="/html/coding.html">Code</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="physics.html">Physics</a>
+            <a class="dropdown-item" href="/html/physics.html">Physics</a>
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="blog.html">Blog</a>
+          <a class="nav-link" href="/html/blog.html">Blog</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html">About me</a>
+          <a class="nav-link" href="/html/about.html">About me</a>
         </li>
       </ul>
     </nav>
@@ -55,32 +55,32 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="carousel-item active">
-          <img class="first-slide" src="../imatges/compflat.png" alt="First slide">
+          <img class="first-slide" src="/imatges/compflat.png" alt="First slide">
           <div class="container">
             <div class="carousel-caption text-xs-left">
               <h1 class="negre">  Computer Graphics</h1>
               <p class="negre">3D creations using Blender.</p>
-              <p><a class="btn btn-lg btn-info" href="cg.html" role="button">Check CG Content</a></p>
+              <p><a class="btn btn-lg btn-info" href="/html/cg.html" role="button">Check CG Content</a></p>
             </div>
           </div>
         </div>
         <div class="carousel-item">
-          <img class="second-slide" src="../imatges/code.png" alt="Second slide">
+          <img class="second-slide" src="/imatges/code.png" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
               <h1 class="negre">Coding</h1>
               <p class="negre">Jupyer notebook, Python and more to create various programs.</p>
-              <p><a class="btn btn-lg btn-info" href="coding.html" role="button">Check coding projects</a></p>
+              <p><a class="btn btn-lg btn-info" href="/html/coding.html" role="button">Check coding projects</a></p>
             </div>
           </div>
         </div>
         <div class="carousel-item">
-          <img class="third-slide" src="../imatges/7.png" alt="Third slide">
+          <img class="third-slide" src="/imatges/7.png" alt="Third slide">
           <div class="container">
             <div class="carousel-caption text-xs-right">
               <h1 class="negre">Physics and science.</h1>
               <p class="negre">Information related to Physics degree.</p>
-              <p><a class="btn btn-lg btn-info" href="physics.html" role="button">Check Physics work</a></p>
+              <p><a class="btn btn-lg btn-info" href="/html/physics.html" role="button">Check Physics work</a></p>
             </div>
           </div>
         </div>
@@ -114,10 +114,10 @@
           <p class="lead">
               I discovered <em>Blender</em> back in 2009. Now I use this software to create technical animations, artistic renders, characters and much more.
           </p>
-          <a class="btn btn-primary marge" type="button" href="cg.html">More about Graphics</a>
+          <a class="btn btn-primary marge" type="button" href="/html/cg.html">More about Graphics</a>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-fluid m-x-auto img-rounded" src="../imatges/mascotathumb.png" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-fluid m-x-auto img-rounded" src="/imatges/mascotathumb.png" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -130,10 +130,10 @@
           <p class="lead">
               Coding little programs to understand different scientific concepts. Trying out some known algorithms to create physics simulations, also discovering my own methods to design efficient programs.
           </p>
-            <a class="btn btn-primary marge" type="button" href="coding.html">More about Coding</a>
+            <a class="btn btn-primary marge" type="button" href="/html/coding.html">More about Coding</a>
         </div>
         <div class="col-md-5 pull-md-7">
-          <img class="featurette-image img-fluid m-x-auto img-rounded" src="../imatges/lletres.png" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-fluid m-x-auto img-rounded" src="/imatges/lletres.png" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -146,10 +146,10 @@
           <p class="lead">
               Two of the most useful things that physics gives us are the capability to write mathematically a natural phenomenon and the mindset to solve difficult problems.
           </p>
-          <a class="btn btn-primary marge" type="button" href="physics.html">More about Physics</a>
+          <a class="btn btn-primary marge" type="button" href="/html/physics.html">More about Physics</a>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-fluid m-x-auto img-rounded" src="../imatges/attLorentz.png" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-fluid m-x-auto img-rounded" src="/imatges/attLorentz.png" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
         </div>
       </div>
       </div>
