--- a/html/physics.html
+++ b/html/physics.html
@@ -22,9 +22,13 @@
 
     <body>
 
+        
+    <div class="container">
         <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
-            <a class="navbar-brand" href="../index.html">Marti Gimeno Orti </a>
+            <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#navbar-header" aria-controls="navbar-header" aria-expanded="false" aria-label="Toggle navigation"></button>
+            <div class="collapse navbar-toggleable-xs" id="navbar-header">
             <ul class="nav navbar-nav">
+                <li class="nav-item"><a class="navbar-brand" href="../index.html">Marti Gimeno Orti </a> </li>
                 <li class="dropdown nav-item">
                     <a id="drop1" href="#" role="button" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Projects
@@ -44,6 +48,7 @@
                     <a class="nav-link" href="about.html">About me</a>
                 </li>
             </ul>
+            </div>
         </nav>
 
 
@@ -143,7 +148,7 @@ int main()
                     </div>
                     <hr>
                     <div class="card-well">
-                        <iframe src="http://nbviewer.jupyter.org/github/itsmgo/daily-practices/blob/master/Notebooks/Atractorlorenz.ipynb" width="100%" height="600px" frameborder=0>Not supported in your browser</iframe>
+                        <iframe src="https://nbviewer.jupyter.org/github/itsmgo/daily-practices/blob/master/Notebooks/Atractorlorenz.ipynb" width="100%" height="600px" frameborder=0>Not supported in your browser</iframe>
                     </div>
                 </div>
             </div>
