--- a/html/coding.html
+++ b/html/coding.html
@@ -21,8 +21,10 @@
     <body>
 
         <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
-            <a class="navbar-brand" href="../index.html">Marti Gimeno Orti </a>
+            <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#navbar-header" aria-controls="navbar-header" aria-expanded="false" aria-label="Toggle navigation"></button>
+            <div class="collapse navbar-toggleable-xs" id="navbar-header">
             <ul class="nav navbar-nav">
+                <li class="nav-item"><a class="navbar-brand" href="../index.html">Marti Gimeno Orti </a> </li>
                 <li class="dropdown nav-item">
                     <a id="drop1" href="#" role="button" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Projects
@@ -42,6 +44,7 @@
                     <a class="nav-link" href="about.html">About me</a>
                 </li>
             </ul>
+            </div>
         </nav>
 
 
