--- a/index.html
+++ b/index.html
@@ -15,33 +15,36 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="/html/marti-template.css" rel="stylesheet">
-    <link href="/html/carousel.css" rel="stylesheet">
+    <link href="html/marti-template.css" rel="stylesheet">
+    <link href="html/carousel.css" rel="stylesheet">
       
   </head>
   <body>
     <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
-      <a class="navbar-brand" href="index.html">Marti Gimeno Orti </a>
-      <ul class="nav navbar-nav">
-        <li class="dropdown nav-item">
-          <a id="drop1" href="#" role="button" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Projects
-          </a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="/html/cg.html">Graphics</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/html/coding.html">Code</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/html/physics.html">Physics</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/html/blog.html">Blog</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/html/about.html">About me</a>
-        </li>
-      </ul>
+        <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#navbar-header" aria-controls="navbar-header" aria-expanded="false" aria-label="Toggle navigation"></button>
+        <div class="collapse navbar-toggleable-xs" id="navbar-header">
+        <ul class="nav navbar-nav">
+            <li class="nav-item"><a class="navbar-brand" href="index.html">Marti Gimeno Orti </a> </li>
+            <li class="dropdown nav-item">
+                <a id="drop1" href="#" role="button" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Projects
+                </a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="/html/cg.html">Graphics</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="/html/coding.html">Code</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="/html/physics.html">Physics</a>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/html/blog.html">Blog</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/html/about.html">About me</a>
+            </li>
+        </ul>
+        </div>
     </nav>
     
    <!-- Carousel
