new blog entry 17/2

--- a/html/cg.html
+++ b/html/cg.html
@@ -68,10 +68,10 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="myModalLabel">House</h4>
+                <h4 class="modal-title" id="CasaModalLabel">House</h4>
               </div>
               <div class="modal-body">
-                <p>Render created just for fun. Playing with the bevel modifier. Most of the geometry of the house it's achived just by merging different parallelepiped.</p>
+                <p>Render created just for fun. Playing with the bevel modifier. Most of the geometry of the house it's achived just by merging different cubes.</p>
                 <ul>
                     <li>Creation date: -/-/-</li>
                     <li>Render time: -:-:-</li>
@@ -91,9 +91,37 @@
           <div class="card">
                 <img src="../imatges/physicsthumb.png" data-src="holder.js/500x500/thumb" alt="Card image cap">
                 <a class="btn btn-sm btn-success" href="../imatges/7.png" role="button">View image</a>
-                <a class="btn btn-sm btn-primary dreta disabled" href="../imatges/7.png" role="button">Info</a>
+                <a class="btn btn-sm btn-primary dreta" href="#" data-toggle="modal" data-target="#modalphysics" role="button">Info</a>
           </div>
 
+                    <!-- Modal -->
+          
+          <div class="modal fade" id="modalphysics" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title" id="PhysicsModalLabel">House</h4>
+              </div>
+              <div class="modal-body">
+                <p>Render created just for fun. Playing with the bevel modifier. Most of the geometry of the house it's achived just by merging different cubes.</p>
+                <ul>
+                    <li>Creation date: -/-/-</li>
+                    <li>Render time: -:-:-</li>
+                    <li>Polygons: -</li>
+                    <li>Textures: <a href="https://textures.com">CGTextures</a> and procedural textures.</li>
+                </ul>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <a class="btn btn-success" href="../imatges/unused/6.png" role="button">View image</a>
+              </div>
+            </div>
+          </div>
+          </div>
+          
           <div class="card">
                 <img src="../imatges/mascota2thumb.png" data-src="holder.js/500x500/thumb" alt="Card image cap">
                 <a class="btn btn-sm btn-success" href="../imatges/unused/mascota1.png" role="button">View image</a>
@@ -104,6 +132,11 @@
                 <a class="btn btn-sm btn-success" href="../imatges/compflat.png" role="button">View image</a>
                 <a class="btn btn-sm btn-primary dreta disabled" href="../imatges/compflat.png" role="button">Info</a>
             </a>
+          </div>
+          <div class="card">
+                <img src="../imatges/budathumb.png" data-src="holder.js/500x500/thumb" alt="Card image cap">
+                <a class="btn btn-sm btn-success" href="../imatges/unused/buda.png" role="button">View image</a>
+                <a class="btn btn-sm btn-primary dreta disabled" href="../imatges/unused/buda.png" role="button">Info</a>
           </div>
           <div class="card">
                 <img src="../imatges/mascotathumb.png" data-src="holder.js/500x500/thumb" alt="Card image cap">
