--- a/html/coding.html
+++ b/html/coding.html
@@ -68,7 +68,7 @@
                             <li>Understanding crowd behaviour</li>
                             <ol>
                                 <li> Running tests on different situations</li>
-                                <li> Use machine learning to ser the best conditions</li>
+                                <li> Use machine learning to set the best conditions</li>
                                 <li> Analize the results</li>
                             </ol>
                         </ul>
