solver youtube embbed issue

--- a/html/blog.html
+++ b/html/blog.html
@@ -83,7 +83,7 @@
             <hr>
             <p> After a few corrections made by Marta, the video was done. The day after, the project was presented in front of institutions and bussiness. Here you can see the final version:</p>
             <br>
-              <iframe class="imatge" width="750" height="500" src="https://www.youtube.com/watch?v=aHP1BTfcWUg"></iframe>
+              <div style="overflow:hidden;max-width:100%;max-height:auto;"><div id="youtube_canvas" style="max-width:100%"><iframe style="height:393px;width:100%;max-width:100%;border:0;" frameborder="0" src="https://www.youtube.com/embed/aHP1BTfcWUg?hl=en&amp;autoplay=0&amp;cc_load_policy=0&amp;loop=0&amp;iv_load_policy=0&amp;fs=1&amp;showinfo=0"></iframe></div><style>#youtube_canvas img{max-width:none!important;background:none!important}</style></div>
             <br>
             <h3>Additional work:</h3>
             <hr>
