--- a/html/blog.html
+++ b/html/blog.html
@@ -58,6 +58,40 @@
       <div class="row">
         <div class="col-sm-8 blog-main">
           <div class="marti-base">
+            <h1 class="blog-post-title">New project: Contibuting to create maps with 3D elements!</h1>
+            <p class="blog-post-meta">October 17, 2016 by <a href="about.html">Martí</a></p>
+            
+            <p>Lately I've been working with <a href="http://www.noetperdis.com/">SR GrupSis Associats</a>. They are specialized in the creation of maps. My job was to create some particular 3D elements to add to the map in order to give it more interest as well as make it more appealing.</p>
+            <br>
+            <h2> My contribution: </h2>
+            <hr>
+            <p>The majority of elements that I had to create were existing buildings, so I had to do a bit of research to find the appropiate reference imatges. The modelling and texturing of those buildings was the hardest part of the project, as they had to look like the real ones.</p>
+            <br>
+            <p> </p>
+            <img class="imatge" src="/imatges/mapes/stamerce.png"><br>
+              3D model of a church, Santa Merce (Calldetenes).
+            <br>
+            <br>
+            <p> I used a lot of textures to make the buildings look realistic without having to do a detailed modelling. Doing that, I could save a lot of time. Here you can see the configuration of the basic cobblestone material:</p>
+            <img class="imatge" src="/imatges/mapes/nodetreecobb.png"><br>
+              Node tree of the cobblestone material
+            <br>
+            <br>
+            <p> Luckily, all the elements are still, which means that the render time were quite low, although the resolution of the final imatges was big (5000x5000px).</p>
+            <br>
+            <h3>Final version:</h3>
+            <hr>
+            <p> When putting all the pieces together, the final imatge was composed by more than 250 elements. Below is another unique building from Calldetenes.</p>
+            <img class="imatge" src="/imatges/mapes/stmarc.png"><br>
+              El turó de Sant Marc
+            <br>
+            <br>
+            <h3>Future work:</h3>
+            <hr>
+            <p>Now I'm done with Physics exams and I have some free time for me. I would like to start programming a music player mobile app. This is an ambitious project, but I have a few ideas in the paper in order to make it doable.</p>
+          </div><!-- /.blog-post -->
+        <hr>
+          <div class="marti-base">
             <h1 class="blog-post-title"><em>"Sit Up: L'Alça"</em>, my lastest product demonstration:</h1>
             <p class="blog-post-meta">October 17, 2016 by <a href="about.html">Martí</a></p>
             
