--- a/html/enquesta.html
+++ b/html/enquesta.html
@@ -8,6 +8,7 @@
 <div id="main">
 <h1>Benvinguda! Posa't cómode i respon el que et vingui de gust.</h1>
 <form action="http://formspree.io/marti@merceorti.com" method="post">
+    <meta name="referrer" content="origin" />
     Quants anys tens?<br>
     <input type="text" name="Quants anys tens?">
     On vius?<br>
