--- a/html/enquesta.html
+++ b/html/enquesta.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="referrer" content="origin" />
 <title>Formulari</title> <!-- Include CSS file here -->
 <link href="form.css" rel="stylesheet">
 </head>
 <body>
+    
 <div id="main">
 <h1>Benvinguda! Posa't cómode i respon el que et vingui de gust.</h1>
 <form action="http://formspree.io/marti@merceorti.com" method="post">
