--- a/laboratori/index.html
+++ b/laboratori/index.html
@@ -8,7 +8,7 @@
 <body>
     
 <div id="main">
-<h1>Benvinguda! Posa't cómode i respon el que et vingui de gust.</h1>
+<h1>Benvinguda! Posa't còmode i respon el que et vingui de gust.</h1>
 <form action="http://formspree.io/marti@merceorti.com" method="post">
     <meta name="referrer" content="origin" />
     Quants anys tens?<br>
@@ -53,7 +53,14 @@
     <br>
     <hr>
     <br>
+    <hr>
     <br>
+    <h3>OPCIONAL (Com tot, de fet):</h3>
+    L'elevat nombre de participants anònimes, així com la meva curiositat insaciable, m'han fet incorporar una casella de contacte, estaré encantat de poder contactar amb tu:
+    (Correu/Telèfon/Adreça/Lloc i hora/etc...)<br>
+    <input type="text" name="Contacte">
+    <br>
+    
     <br>
     <br>
 </form>
