--- a/laboratori/index.html
+++ b/laboratori/index.html
@@ -8,62 +8,9 @@
 <body>
     
 <div id="main">
-<h1>Benvinguda! Posa't còmode i respon el que et vingui de gust.</h1>
-<form action="http://formspree.io/marti@merceorti.com" method="post">
-    <meta name="referrer" content="origin" />
-    Quants anys tens?<br>
-    <input type="text" name="Quants anys tens?">
-    On vius?<br>
-    <input type="text" name="On vius?">
-    Estudies? En cas afirmatiu, què?<br>
-    <input type="text" name="Estudies? En cas afirmatiu, què?">
-    De què t'agradaria treballar?<br>
-    <input type="text" name="De què t'agradaria treballar?">
-    Què t'agrada fer durant el temps lliure?<br>
-    <input type="text" name="Què t'agrada fer durant el temps lliure?">
-    Fas extraescolars? En cas afirmatiu, quines?<br>
-    <input type="text" name="Fas extraescolars? En cas afirmatiu, quines?">
-    Tens parella sentimental?<br>
-    <input type="text" name="Tens parella sentimental?">
-    Busques parella sentimental? En cas afirmatiu, això no es busca, es troba sense voler.<br>
-    <input type="text" name="Busques parella sentimental? En cas afirmatiu, això no es busca, es troba sense voler.">
-    Gat o gos?<br>
-    <input type="text" name="Gat o gos?">
-    Quina és la teva fruita preferida?<br>
-    <input type="text" name="Quina és la teva fruita preferida?">
-    Si hi hagués un incendi a casa teva, quins 3 objectes/coses/humans/animals salvaries?<br>
-    <input type="text" name="salvar1"><input type="text" name="salvar2"><input type="text" name="salvar3">
-    Ets verge?<br>
-    <input type="text" name="Ets verge?">
-    Quin és el teu color preferit?<br>
-    <input type="text" name="Quin és el teu color preferit?">
-    Com et definiries amb una paraula?<br>
-    <input type="text" name="Com et definiries amb una paraula?">
-    Què en penses sobre aquesta enquesta?<br>
-    <input type="text" name="Què en penses sobre aquesta enquesta?">
-    Quina pregunta t'ha agradat més?<br>
-    <input type="text" name="Quina pregunta t'ha agradat més?">
-    Quina pregunta t'ha sorprès més?<br>
-    <input type="text" name="Quina pregunta t'ha sorprès més?">
-    Gràcies per participar en aquesta... com t'ho diria... cita virtual, tindré en compte la teva iniciativa.<br>
-    <br>
+    <h1>Get lost!</h1>
     <hr>
-    <br>
-    <input type="submit" value="Envia" onclick="return confirm('Segur que vols enviar les respostes? Que atrevida, em sembla atractiu!')">
-    <br>
-    <hr>
-    <br>
-    <hr>
-    <br>
-    <h3>OPCIONAL (Com tot, de fet):</h3>
-    L'elevat nombre de participants anònimes, així com la meva curiositat insaciable, m'han fet incorporar una casella de contacte, estaré encantat de poder contactar amb tu:
-    (Correu/Telèfon/Adreça/Lloc i hora/etc...)<br>
-    <input type="text" name="Contacte">
-    <br>
-    
-    <br>
-    <br>
-</form>
+    <h3>(Que vindria a ser: Perdi's!, cosa que pot sonar aventurer, però vull que soni malament! Aquí no hi ha res a veure, ja no.)</h3>
 </div>
 </body>
 </html>
