--- a/nadal/index.html
+++ b/nadal/index.html
@@ -5,8 +5,8 @@
 <link rel="stylesheet" type="text/css" href="magnifier.css">
 </head>
 <script>
-    if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
-        location.href = "/mobil.html";
+    if( screen.width <= 520 ) {
+        location.href = "/nadal/mobil.html";
     }
 </script>
 <body>
