--- a/holaaina/index.html
+++ b/holaaina/index.html
@@ -53,7 +53,7 @@
           </div><!-- /.blog-post -->
         <hr>
           <div class="marti-base" style="display:none;" id="text1">
-            <p>En efecte, la visita al lavabo s'ahia allargat inesperadament i ara es trobava corrents cap al menjador. El raïm sempre havia estat un rival dur i no pensava deixar-se vencer un altre any, després de la humiliant derrota de 2016, on el raïm va aconseguir sortir disparat cap enfora quan només faltaven 2 campanades.</p>
+            <p>En efecte, la visita al lavabo s'havia allargat inesperadament i ara es trobava corrents cap al menjador. El raïm sempre havia estat un rival dur i no pensava deixar-se vencer un altre any, després de la humiliant derrota de 2016, on el raïm va aconseguir sortir disparat cap enfora quan només faltaven 2 campanades.</p>
           </div><!-- /.blog-main -->
           <div class="marti-base" style="display:none;" id="text2">
             <p>Ben entrats en l'era de la informació, sempre s'ha d'estar pendent de la tecnologia i la immediatesa de les coses. També ho feia perquè ultimament les coses no anaven gaire bé entre ells dos i un missatge a les 00:00 sempre arregla les coses... o no.</p>
@@ -81,7 +81,7 @@
             // Animation complete.
           });
         });
-        $(document).on('change', '#boto3', function (event) {
+        $(document).on('change', '#boto2', function (event) {
             $('#text2').toggle('slow', function() {
             // Animation complete.
           });
