DV versio_beta br als buttons

--- a/holaaina/index.html
+++ b/holaaina/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="referrer" content="origin" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -38,9 +39,9 @@
             <h3> Per què patia? </h3>
             <hr>
             <div class="block" role="group">
-              <button type="button" class="btn btn-secondary gris block" id="boto1">Per acabar-se el raïm a temps</button> <br>
-              <button type="button" class="btn btn-secondary gris block" id="boto2">Per ser la primera a felicitar l'any nou al novio pel WhatsApp</button> <br>
-              <button type="button" class="btn btn-secondary gris block" id="boto3">Per com aniria el 2017, començant per aquella mateixa nit</button> <br>
+              <button type="button" class="btn btn-secondary gris block" id="boto1">Per acabar-se el<br>raïm a temps</button> <br>
+              <button type="button" class="btn btn-secondary gris block" id="boto2">Per ser la primera a felicitar l'any nou<br>al novio pel WhatsApp</button> <br>
+              <button type="button" class="btn btn-secondary gris block" id="boto3">Per com aniria el 2017, començant per<br>aquella mateixa nit</button> <br>
             </div>
           </div><!-- /.blog-main -->
         <hr>
@@ -52,9 +53,9 @@
             <h3> Quin era el pla per cap d'any? </h3>
             <hr>
             <div class="block" role="group">
-              <button type="button" class="btn btn-secondary gris block" id="boto21">Beure fins que el cos digués prou</button> <br>
-              <button type="button" class="btn btn-secondary gris block" id="boto22">Prudència amb l'esperança d'arribar a casa abans de les 6</button> <br>
-              <button type="button" class="btn btn-secondary gris block" id="boto23">Anar a l'aventura sense cap idea en especial </button> <br>
+              <button type="button" class="btn btn-secondary gris block" id="boto21">Beure fins que el cos<br>digués prou</button> <br>
+              <button type="button" class="btn btn-secondary gris block" id="boto22">Prudència amb l'esperança d'arribar<br>a casa abans de les 6</button> <br>
+              <button type="button" class="btn btn-secondary gris block" id="boto23">Anar a l'aventura sense<br>cap idea en especial </button> <br>
             </div>
           </div><!-- /.blog-main -->
           <div class="marti-base" style="display:none;" id="text2">
