DV versio_beta canvi mail

--- a/capdany/index.html
+++ b/capdany/index.html
@@ -104,14 +104,14 @@
         <div class="marti-base">
             <br>
             <p style="text-align:center"> Espero que t'ho hagis passat tan bé decidint aquesta història com jo fent-la!</p>
-            <form action="http://formspree.io/marti@merceorti.com" method="post">
+            <form action="http://formspree.io/marti_8_8_9_7@hotmail.com" method="post">
                 <meta name="referrer" content="origin" />
                 <input type="text" name="Patiment" id="i1" style="display:none;"> 
                 <input type="text" name="Plan Cap d'Any" id="i2" style="display:none;"> 
                 <input type="text" name="Moment Remarcable" id="i3" style="display:none;"> 
                 <input type="text" name="Veredicte" id="i4" style="display:none;"> 
                 <input type="text" name="Convidar" id="i5" style="display:none;"> 
-                <input type="submit" class="btn btn-secondary gris block" value="Envia" onclick="return confirm('Segura?')"> <br>
+                <input type="submit" class="btn btn-secondary gris block" value="Envia" onclick="return confirm('Estàs segura, Aina?')"> <br>
             </form>
         </div>
       </div>    
